fix searchbar width on small screens

--- a/teamvault/static/scss/search.scss
+++ b/teamvault/static/scss/search.scss
@@ -62,6 +62,7 @@
 
 #searchbar-toggle {
   color: var(--tv-color-secondary-txt);
+  min-width: 16rem;
 
   kbd {
     padding-inline: .5rem;
